<resources>
    <string name="app_name">AndroidApp_Ex</string>
    <string name="enter_your_login_and_password">Enter your Login and Password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter">Enter</string>
    <string name="close_app">Close APP</string>
    <string name="close_calc">Close Calculator</string>
    <string name="title_activity_calculator">Calculator</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="calculator">Calculator</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="nameCalc">Name</string>
    <string name="inter_your_numbers">Inter your numbers</string>
    <string name="sum">+</string>
    <string name="minus">-</string>
    <string name="mult">*</string>

</resources>